FD-58 one more spacing fix in about "Research Insights are only valuable..." section

--- a/site/assets/styles/scss/styles.scss
+++ b/site/assets/styles/scss/styles.scss
@@ -494,6 +494,9 @@ img.avatar {
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            > p {
+                max-width: 20rem;
+            }
         }
     }
     .img-fluid-box {
